# conturi

./: README.md  requirements.txt
backend/: .dockerignore  Docker-compose.yaml  DockerFile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/db/: chroma.sqlite3
backend/db/eaf03d9e-6ef5-44d8-81f3-57526cf6b60b/: index_metadata.pickle
backend/src/conturi/: app.py  chat_models.py  chatbot.py  components.py  crew.py  db_handler.py  main.py  trial.ipynb
backend/src/conturi/auth/: auth_service.py
backend/src/conturi/auth/models/: token.py
backend/src/conturi/config/: agents.yaml  tasks.yaml
frontend/: index.html  script.js  style.css
src/: .env  components.py  db_handler.py
